# PyRBP

./: LICENSE  README.md  evaluateClassifiers.py  filesOperation.py  requirement.txt
PyRBP/: Features.py  biologicalFeatures.py  featureSelection.py  languageFeatures.py  metricsPlot.py  structureFeatures.py
PyRBP/RNA_datasets/AGO1/: label
PyRBP/RNA_datasets/AGO2/: seq
PyRBP/RNA_datasets/AGO3/: label
PyRBP/RNA_datasets/ALKBH5/: label  seq
PyRBP/RNA_datasets/AUF1/: seq
PyRBP/RNA_datasets/C17ORF85/: label  seq
RBP_apckage_no_banana/: combine_letter_profiles.py  featureSelection.py
RBP_package/: LICENSE  README.md  biologicalFeatures.py  filesOperation.py  languageFeatures.py  pyproject.toml  requirements.txt
RBP_package/src/RBP_apckage_no_banana/: evaluateClassifiers.py  metricsPlot.py  structureFeatures.py
doc/source/: RBP_package.rst  conf.py
docs/doctrees/: RNA_features.doctree  evaluateClassifiers_examples.doctree  feature_selection_methods.doctree  fileOperation_examples.doctree  index.doctree  release_history.doctree
docs/source/: API_Demo.py  Installation.rst  RBP_package.rst  RNA_features.md  RNA_features.rst  analysis_plots.md  analysis_plots.rst  basic_usage.rst  conf.py  evaluateClassifiers_examples.rst  evaluate_classifiers.md  evaluate_classifiers.rst  featureSelection_examples.rst  feature_selection_methods.md  feature_selection_methods.rst  fileOperation_examples.rst  file_operation.md  file_operation.rst  getting_started.md  getting_started.rst  index.rst  plotAnalysis_examples.rst  release_history.rst  test.md
source/: API_Demo.py
(+182 files in other folders)
