[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "RBP_package_no_banana"
version = "0.0.1"
authors = [
  { name="no_banana", email="706796795@qq.com" },
]
description = "A toolkit that enables one-stop RBP sequencing"
readme = "README.md"
requires-python = ">=3.7.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = ""
"Bug Tracker" = ""